fix(dev-portal): spacings

--- a/assets/styles/typograhpy.scss
+++ b/assets/styles/typograhpy.scss
@@ -32,7 +32,7 @@ p a, label a, a.link, td a {
 
 
 p {
-  @apply m-0;
+  @apply my-0;
 }
 
 strong {
